--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,7 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${workspaceFolder}\\cpp\\bin\\${fileBasenameNoExtension}.exe"
+                "${workspaceFolder}/bin/${fileBasenameNoExtension}.exe"
             ],
             "options": {
                 "cwd": "${fileDirname}"
