--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "cwd": "${fileDirname}"
         },
         {
-            "name": "(gdb) Launch",
+            "name": "Debug C++",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/${fileBasenameNoExtension}.exe",
@@ -36,7 +36,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "c++ build"
+            "preLaunchTask": "Build C++"
         }
 
 
